[package]
name = "killfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.3", features = ["serde"]}
edit = "0.1.5"
itertools = "0.13.0"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
